Bug 1409. Fix the splash screen alignment and text width.
Reviewed-on: http://review.northscale.com:8080/757
Tested-by: Matt Ingenthron <matt@northscale.com>

--- a/deps/menelaus/priv/public/css/screen.css
+++ b/deps/menelaus/priv/public/css/screen.css
@@ -753,15 +753,19 @@ button:disabled {opacity:0.5 !important; background-position:0 0 !important;}
 body.init_welcome #init_block { display: block; }
 body.init_welcome #init_welcome_dialog { display: block; }
 body.init_welcome #container { display: none; }
-body.init_welcome #init_welcome_dialog h1 {color:#fff; font-family:Verdana, Helvetica, sans-serif; font-size:18pt; font-weight:100; margin-bottom:-25px; padding-left:25px;}
+body.init_welcome #init_welcome_dialog h1 {color:#fff; font-family:Verdana, Helvetica, sans-serif; font-size:18pt; font-weight:100; margin-bottom:-25px; margin-left:25px; padding-left:25px;}
 body.init_welcome #init_welcome_dialog p {color:#acbbc4; font-family:Verdana, Helvetica, sans-serif; font-size:14pt; font-weight:100;}
-body.init_welcome #init_welcome_dialog .pad-header .tagline, .init_block .pad .pad-header .version {float:left; margin-top:73px;}
-body.init_welcome #init_welcome_dialog .pad-header .tagline {color:#00a6de; font-size:12pt; margin-left:225px; margin-right:25px;}
-body.init_welcome #init_welcome_dialog .pad-header .version {color:#ec5223; font-size:11pt;}
+body.init_welcome #init_welcome_dialog .pad-header .tagline,
+body.init_welcome #init_welcome_dialog .pad-header .version {float:left; margin-top:73px;}
+body.init_welcome #init_welcome_dialog .pad-header div.tagline {color:#00a6de; font-size:12pt; margin-left:225px; margin-right:25px;}
+body.init_welcome #init_welcome_dialog .pad-header div.version {color:#ec5223; font-size:11pt;}
+body.init_welcome #init_welcome_dialog .pad-header div.elastro-cling {background:url(../images/elastro_cling_v22.png) no-repeat; float:right; height:239px; margin-right:-169px; width:189px;}
+
 body.init_welcome #init_welcome_dialog .welcome-footer {color:#9aa3a8; font-family:Verdana, Helvetica, sans-serif; font-size:10pt; margin-top:85px; text-align:center; width:724px;}
 body.init_welcome #init_welcome_dialog .welcome-footer a {color:#a7e4ff; margin-left:15px; margin-right:15px;}
-body.init_welcome #init_welcome_form p {color:#bdccd4; font-family:Verdana, Helvetica, sans-serif; font-size:13pt; font-weight:100; line-height:20px;}
-body.init_welcome #init_welcome_form input.license-input {border:1px solid #b6bdc1; color:#7e7e80; font-family:Verdana, Helvetica, sans-serif; font-size:12pt; height:30px; line-height:30px; padding:0px 0px 0px 5px; width:210px;}
+body.init_welcome form#init_welcome_form p {color:#bdccd4; font-family:Verdana,Helvetica,sans-serif; font-size:12pt; line-height:20px; margin-bottom:20px;}
+body.init_welcome form#init_welcome_form input.license-input {border:1px solid #b6bdc1; color:#7e7e80; font-family:Verdana, Helvetica, sans-serif; font-size:12pt; height:30px; line-height:30px; margin:0px; padding:0px 0px 0px 5px; width:210px;}
+body.init_welcome form#init_welcome_form {margin-bottom:175px; margin-left:50px; margin-top:25px; width:600px;}
 /* config */
 button.direction-button {background:url(../images/blue-button.png) no-repeat; border:none; color:#fff; cursor:pointer; float:right; font-family:Arial, Helvetica, Sans-Serif; font-size:12pt; margin-right:20px; margin-top:20px; width:121px; height:31px;}
 
@@ -803,7 +807,7 @@ body.init_secure #container { display: none; }
 
 .init_block {min-height:737px; height:100%; position:relative;}
 .init_block h1 {color:#2f3536; text-transform:uppercase; font-size:28px; padding:28px 0 30px 0; position:relative; top:13px;}
-.init_block .pad {background:url(../images/welcome-background.png) no-repeat; position:relative; width:724px; margin:auto; top:100px;}
+.init_block .pad {background:url(../images/welcome-background.png) no-repeat; width:724px; margin-left:auto; margin-right:auto; margin-top:100px;}
 .init_block .pad .pad-header {height:115px; width:703px;}
 .init_block .form {display:block; width:580px; background:url(../images/welcome_form_bg.png) 0 0 no-repeat;}
 .init_block .form table {margin:25px 0 0 25px;}
@@ -949,14 +953,6 @@ ul.tabs.switcher {height:32px; overflow:visible;}
 .btn_1 span {/*display:inline-block;*/ display:block; text-align:center; height:31px; padding:0 6px 0 10px; line-height:31px; background:url(../images/btn_1_bg.png) 0 0 no-repeat;}
 
 .panes.pad {background:none !important;}
-
-/* Elastro */
-#elastro-cling {
-  float:right;
-  position: relative;
-  right:-149px;
-  top:-50px;
-}
 
 /* temporary styles */
 .jqmWindow {position:absolute;}
